lcategoryをspot_categoryにしてスキーマ変更 (#218)
* modify lcategory schema

* modify import script

* fix test

* rename lcategory -> spot_category

* update swagger

* rename migration
