# pkg/domain/model/query/tourist_spot.go
@@ -6,7 +6,7 @@ type (
 		AreaID         int
 		SubAreaID      int
 		SubSubAreaID   int
-		LcategoryID    int
+		SpotCategoryID int
 		ExcludeSpotIDs []int
 		Limit          int
 		OffSet         int
